builds/tests/354/data/attachments/254e87e611282d80.txt
2026-06-22 10:29:14,307 INFO     yoyo.migrations — Applying 0001_initial_schema
2026-06-22 10:29:14,308 INFO     yoyo.migrations —  - applying step 0
2026-06-22 10:29:14,308 INFO     yoyo.migrations —  - applying step 1
2026-06-22 10:29:14,308 INFO     yoyo.migrations —  - applying step 2
2026-06-22 10:29:14,308 INFO     yoyo.migrations —  - applying step 3
2026-06-22 10:29:14,308 INFO     yoyo.migrations —  - applying step 4
2026-06-22 10:29:14,308 INFO     yoyo.migrations —  - applying step 5
2026-06-22 10:29:14,309 INFO     yoyo.migrations —  - applying step 6
2026-06-22 10:29:14,309 INFO     yoyo.migrations —  - applying step 7
2026-06-22 10:29:14,309 INFO     yoyo.migrations —  - applying step 8
2026-06-22 10:29:14,309 INFO     yoyo.migrations —  - applying step 9
2026-06-22 10:29:14,309 INFO     yoyo.migrations —  - applying step 10
2026-06-22 10:29:14,309 INFO     yoyo.migrations —  - applying step 11
2026-06-22 10:29:14,310 INFO     yoyo.migrations —  - applying step 12
2026-06-22 10:29:14,310 INFO     yoyo.migrations —  - applying step 13
2026-06-22 10:29:14,310 INFO     yoyo.migrations —  - applying step 14
2026-06-22 10:29:14,312 INFO     yoyo.migrations — Marking 0001_initial_schema applied
2026-06-22 10:29:14,313 INFO     yoyo.migrations — Applying 0002_exchange_rates_source_target
2026-06-22 10:29:14,313 INFO     yoyo.migrations —  - applying step 0
2026-06-22 10:29:14,313 INFO     yoyo.migrations —  - applying step 1
2026-06-22 10:29:14,315 INFO     yoyo.migrations — Marking 0002_exchange_rates_source_target applied
2026-06-22 10:29:14,315 INFO     yoyo.migrations — Applying 0003_app_currencies
2026-06-22 10:29:14,316 INFO     yoyo.migrations —  - applying step 0
2026-06-22 10:29:14,317 INFO     yoyo.migrations — Marking 0003_app_currencies applied
2026-06-22 10:29:14,317 INFO     yoyo.migrations — Applying 0004_receipt_pipeline
2026-06-22 10:29:14,318 INFO     yoyo.migrations —  - applying step 0
2026-06-22 10:29:14,318 INFO     yoyo.migrations —  - applying step 1
2026-06-22 10:29:14,318 INFO     yoyo.migrations —  - applying step 2
2026-06-22 10:29:14,318 INFO     yoyo.migrations —  - applying step 3
2026-06-22 10:29:14,319 INFO     yoyo.migrations —  - applying step 4
2026-06-22 10:29:14,319 INFO     yoyo.migrations —  - applying step 5
2026-06-22 10:29:14,319 INFO     yoyo.migrations —  - applying step 6
2026-06-22 10:29:14,319 INFO     yoyo.migrations —  - applying step 7
2026-06-22 10:29:14,320 INFO     yoyo.migrations —  - applying step 8
2026-06-22 10:29:14,320 INFO     yoyo.migrations —  - applying step 9
2026-06-22 10:29:14,320 INFO     yoyo.migrations —  - applying step 10
2026-06-22 10:29:14,321 INFO     yoyo.migrations —  - applying step 11
2026-06-22 10:29:14,321 INFO     yoyo.migrations —  - applying step 12
2026-06-22 10:29:14,321 INFO     yoyo.migrations —  - applying step 13
2026-06-22 10:29:14,321 INFO     yoyo.migrations —  - applying step 14
2026-06-22 10:29:14,321 INFO     yoyo.migrations —  - applying step 15
2026-06-22 10:29:14,322 INFO     yoyo.migrations —  - applying step 16
2026-06-22 10:29:14,322 INFO     yoyo.migrations —  - applying step 17
2026-06-22 10:29:14,323 INFO     yoyo.migrations —  - applying step 18
2026-06-22 10:29:14,323 INFO     yoyo.migrations —  - applying step 19
2026-06-22 10:29:14,323 INFO     yoyo.migrations —  - applying step 20
2026-06-22 10:29:14,323 INFO     yoyo.migrations —  - applying step 21
2026-06-22 10:29:14,323 INFO     yoyo.migrations —  - applying step 22
2026-06-22 10:29:14,325 INFO     yoyo.migrations — Marking 0004_receipt_pipeline applied
2026-06-22 10:29:14,326 INFO     yoyo.migrations — Applying 0005_income_logging
2026-06-22 10:29:14,326 INFO     yoyo.migrations —  - applying step 0
2026-06-22 10:29:14,326 INFO     yoyo.migrations —  - applying step 1
2026-06-22 10:29:14,327 INFO     yoyo.migrations —  - applying step 2
2026-06-22 10:29:14,327 INFO     yoyo.migrations —  - applying step 3
2026-06-22 10:29:14,328 INFO     yoyo.migrations —  - applying step 4
2026-06-22 10:29:14,328 INFO     yoyo.migrations —  - applying step 5
2026-06-22 10:29:14,328 INFO     yoyo.migrations —  - applying step 6
2026-06-22 10:29:14,328 INFO     yoyo.migrations —  - applying step 7
2026-06-22 10:29:14,329 INFO     yoyo.migrations —  - applying step 8
2026-06-22 10:29:14,329 INFO     yoyo.migrations —  - applying step 9
2026-06-22 10:29:14,329 INFO     yoyo.migrations —  - applying step 10
2026-06-22 10:29:14,329 INFO     yoyo.migrations —  - applying step 11
2026-06-22 10:29:14,329 INFO     yoyo.migrations —  - applying step 12
2026-06-22 10:29:14,329 INFO     yoyo.migrations —  - applying step 13
2026-06-22 10:29:14,329 INFO     yoyo.migrations —  - applying step 14
2026-06-22 10:29:14,330 INFO     yoyo.migrations —  - applying step 15
2026-06-22 10:29:14,330 INFO     yoyo.migrations —  - applying step 16
2026-06-22 10:29:14,330 INFO     yoyo.migrations —  - applying step 17
2026-06-22 10:29:14,330 INFO     yoyo.migrations —  - applying step 18
2026-06-22 10:29:14,330 INFO     yoyo.migrations —  - applying step 19
2026-06-22 10:29:14,330 INFO     yoyo.migrations —  - applying step 20
2026-06-22 10:29:14,330 INFO     yoyo.migrations —  - applying step 21
2026-06-22 10:29:14,331 INFO     yoyo.migrations —  - applying step 22
2026-06-22 10:29:14,331 INFO     yoyo.migrations —  - applying step 23
2026-06-22 10:29:14,331 INFO     yoyo.migrations —  - applying step 24
2026-06-22 10:29:14,331 INFO     yoyo.migrations —  - applying step 25
2026-06-22 10:29:14,331 INFO     yoyo.migrations —  - applying step 26
2026-06-22 10:29:14,331 INFO     yoyo.migrations —  - applying step 27
2026-06-22 10:29:14,332 INFO     yoyo.migrations —  - applying step 28
2026-06-22 10:29:14,332 INFO     yoyo.migrations —  - applying step 29
2026-06-22 10:29:14,332 INFO     yoyo.migrations —  - applying step 30
2026-06-22 10:29:14,332 INFO     yoyo.migrations —  - applying step 31
2026-06-22 10:29:14,332 INFO     yoyo.migrations —  - applying step 32
2026-06-22 10:29:14,333 INFO     yoyo.migrations —  - applying step 33
2026-06-22 10:29:14,333 INFO     yoyo.migrations —  - applying step 34
2026-06-22 10:29:14,335 INFO     yoyo.migrations —  - applying step 35
2026-06-22 10:29:14,335 INFO     yoyo.migrations —  - applying step 36
2026-06-22 10:29:14,335 INFO     yoyo.migrations —  - applying step 37
2026-06-22 10:29:14,335 INFO     yoyo.migrations —  - applying step 38
2026-06-22 10:29:14,337 INFO     yoyo.migrations —  - applying step 39
2026-06-22 10:29:14,338 INFO     yoyo.migrations —  - applying step 40
2026-06-22 10:29:14,340 INFO     yoyo.migrations — Marking 0005_income_logging applied
2026-06-22 10:29:14,341 INFO     yoyo.migrations — Applying 0006_category_templates
2026-06-22 10:29:14,341 INFO     yoyo.migrations —  - applying step 0
2026-06-22 10:29:14,345 INFO     yoyo.migrations — Marking 0006_category_templates applied
2026-06-22 10:29:14,346 INFO     yoyo.migrations — Applying 0007_drop_legacy_llmbroker
2026-06-22 10:29:14,346 INFO     yoyo.migrations —  - applying step 0
2026-06-22 10:29:14,346 INFO     yoyo.migrations —  - applying step 1
2026-06-22 10:29:14,348 INFO     yoyo.migrations — Marking 0007_drop_legacy_llmbroker applied
2026-06-22 10:29:14,354 INFO     dinary.background.classification.task — Receipt drain: processing receipt_id=1
2026-06-22 10:29:14,356 ERROR    dinary.background.classification.task — Permanent error for receipt_id=1 — poisoning
Traceback (most recent call last):
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 246, in _process_job
    items = await asyncio.to_thread(_get_items, job.receipt_id)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.14/x64/lib/python3.13/asyncio/threads.py", line 26, in to_thread
    return await loop.run_in_executor(None, func_call)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.14/x64/lib/python3.13/concurrent/futures/thread.py", line 59, in run
    result = self.fn(*self.args, **self.kwargs)
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 541, in _get_items
    raise RuntimeError(
        f"receipt_id={receipt_id}: no items after parsing — parse error",
    )
RuntimeError: receipt_id=1: no items after parsing — parse error
